Bug 1585317 - When using the scrollport, account for scroll-padding for anchor node selection. r=botond

Unclear whether the visual viewport code path is the right thing to do at all.

Differential Revision: https://phabricator.services.mozilla.com/D47791