layout/generic/nsGfxScrollFrame.h
@@ -177,11 +177,11 @@ class ScrollFrameHelper : public nsIReflowCallback {
   nsPoint GetVisualViewportOffset() const;
 
   /**
-   * Return the 'optimal viewing region' [1] as a rect suitable for use by
+   * Return the 'optimal viewing region' as a rect suitable for use by
    * scroll anchoring. This rect is in the same coordinate space as
-   * 'GetScrollPortRect'.
+   * 'GetScrollPortRect', and accounts for 'scroll-padding' as defined by:
    *
-   * [1] https://drafts.csswg.org/css-scroll-snap-1/#optimal-viewing-region
+   * https://drafts.csswg.org/css-scroll-snap-1/#optimal-viewing-region
    */
   nsRect GetVisualOptimalViewingRect() const;
 
